--- a/Src/sln/MainWindow.xaml
+++ b/Src/sln/MainWindow.xaml
@@ -1,5 +1,6 @@
 ﻿<lnk:WindowBase xmlns:lnk="clr-namespace:AAV.WPF.Base;assembly=AAV.WPF" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                 xmlns:AAV.WPF="clr-namespace:AAV.WPF.View;assembly=AAV.WPF"                
+                xmlns:models="clr-namespace:Cities.Models"
                 xmlns:local="clr-namespace:AAV.WpfTheme.Model.App" x:Name="wnd"
                 x:Class="AAV.WpfTheme.Model.App.MainWindow" mc:Ignorable="d"
                 Title="MainWindow" Height="500" Width="800"                
@@ -72,40 +73,42 @@
       <WrapPanel Grid.Column="0" Grid.Row="1">
         <Label     Content="L_abel:" HorizontalAlignment="Left"  />
         <DatePicker />
+        <GridSplitter Width="110" Height="11" />
         <CheckBox    Content="Check this" IsChecked="False"    />
         <CheckBox    Content="Check this" IsChecked="{x:Null}" />
         <CheckBox    Content="Check this" IsChecked="True"     />
         <RadioButton Content="Radio that" IsChecked="False"    />
         <RadioButton Content="Radio that" IsChecked="{x:Null}" />
         <RadioButton Content="Radio that" IsChecked="True"     />
+        <TextBox Text="101 Yonge St" />
       </WrapPanel>
 
       <WrapPanel Grid.Column="2" Grid.Row="1">
-        <ComboBox Template="{DynamicResource ComboBoxTemplate1}" MinWidth="238" >
+        <ComboBox Style="{DynamicResource NoGoForDarkThemes}" MinWidth="238" >
           <ComboBoxItem Content="Abc" IsSelected="True"/>
           <ComboBoxItem Content="Efg"/>
         </ComboBox>
-        <ComboBox Template="{DynamicResource ComboBoxTemplate1}" MinWidth="238"                                                              >
+        <ComboBox Template="{DynamicResource ComboBoxTemplate_forIsEditable_False}" MinWidth="238"                                                              >
           <ComboBoxItem Content="Abc"/>
           <ComboBoxItem Content="Efg"/>
           <ComboBoxItem IsSelected="True" Content="IsEditable=&quot;Dflt&quot; IsRO=&quot;Dflt&quot;"/>
         </ComboBox>
-        <ComboBox Template="{DynamicResource ComboBoxTemplate1}"  IsEditable="False"  IsReadOnly="True"   BorderBrush="Red" MinWidth="238" >
+        <ComboBox Template="{DynamicResource ComboBoxTemplate_forIsEditable_False}"  IsEditable="False"  IsReadOnly="True"   MinWidth="238" >
           <ComboBoxItem Content="Abc"/>
           <ComboBoxItem Content="Efg"/>
           <ComboBoxItem IsSelected="True" Content="IsEditable=&quot;False&quot; IsRO=&quot;True&quot;"/>
         </ComboBox>
-        <ComboBox Template="{DynamicResource ComboBoxTemplate1}"  IsEditable="False"  IsReadOnly="False"   BorderBrush="Red" MinWidth="238" >
+        <ComboBox Template="{DynamicResource ComboBoxTemplate_forIsEditable_False}"  IsEditable="False"  IsReadOnly="False"   MinWidth="238" >
           <ComboBoxItem Content="Abc"/>
           <ComboBoxItem Content="Efg"/>
           <ComboBoxItem IsSelected="True" Content="IsEditable=&quot;False&quot; IsRO=&quot;False&quot;"/>
         </ComboBox>
-        <ComboBox Template="{DynamicResource ComboBoxTemplate1}"  IsEditable="True"   IsReadOnly="True"  BorderBrush="Red" MinWidth="238" >
+        <ComboBox IsEditable="True" IsReadOnly="True"  MinWidth="238" >
           <ComboBoxItem Content="Abc"/>
           <ComboBoxItem Content="Efg"/>
           <ComboBoxItem IsSelected="True" Content="IsEditable=&quot;True&quot; IsRO=&quot;True&quot;"/>
         </ComboBox>
-        <ComboBox Template="{DynamicResource ComboBoxTemplate1}"  IsEditable="True"   IsReadOnly="False"  BorderBrush="Red" MinWidth="238">
+        <ComboBox Foreground="{DynamicResource LablForegroundBrush}" IsEditable="True" IsReadOnly="False"  MinWidth="238">
           <ComboBoxItem Content="Abc"/>
           <ComboBoxItem Content="Efg"/>
           <ComboBoxItem IsSelected="True" Content="IsEditable=&quot;True&quot; IsRO=&quot;False&quot;"/>
@@ -154,9 +157,27 @@
 
       <TextBlock x:Name="tbkInfo" Grid.Row="4" Grid.ColumnSpan="5" HorizontalAlignment="Left" Text="Some info"/>
 
-      <ListBox  Grid.Column="0" Margin="4" Grid.Row="3" ItemTemplate="{DynamicResource SampleListItemTemplate}"  ItemsSource="{Binding SampleList}" />
+      <ListBox   Grid.Column="0" Margin="4" Grid.Row="3" ItemTemplate="{DynamicResource SampleListItemTemplate}"  ItemsSource="{Binding SampleList}" x:Name="lb1" />
+      <ListView  Grid.Column="0" Margin="4" Grid.Row="3" x:Name="lb2">
+        <d:ListView.ItemsSource>
+          <x:Array Type="{x:Type models:SampleListItem}">
+            <models:SampleListItem ID="75" Name="Maecenas aliquam praesent"     Look="C:\g\AAV.WpfTheme.Model\Src\sln\SampleData\SampleDataSource\SampleDataSource_Files\image01.png" Done="True"/>
+            <models:SampleListItem ID="71" Name="Aenean class cras"             Look="C:\g\AAV.WpfTheme.Model\Src\sln\SampleData\SampleDataSource\SampleDataSource_Files\image02.png" Done="False"/>
+            <models:SampleListItem ID="56" Name="Mauris nullam integer quisque" Look="C:\g\AAV.WpfTheme.Model\Src\sln\SampleData\SampleDataSource\SampleDataSource_Files\image03.png" Done="True"/>
+            <models:SampleListItem ID="77" Name="Accumsan duis"                 Look="C:\g\AAV.WpfTheme.Model\Src\sln\SampleData\SampleDataSource\SampleDataSource_Files\image04.png" Done="False"/>
+          </x:Array>
+        </d:ListView.ItemsSource>
+        <ListView.ItemTemplate>
+          <DataTemplate>
+            <StackPanel Orientation="Horizontal" >
+              <Image Source="{Binding Look}" Height="32" />
+              <TextBlock Text="{Binding Name}" Margin="0,0,5,0" />
+            </StackPanel>
+          </DataTemplate>
+        </ListView.ItemTemplate>
+      </ListView>
 
-      <DataGrid Grid.Column="4" Margin="4" Grid.Row="3" AutoGenerateColumns="False" ItemsSource="{Binding SampleList}">
+      <DataGrid Grid.Column="4" Margin="4" Grid.Row="3" AutoGenerateColumns="False" ItemsSource="{Binding SampleList}" x:Name="dg2">
         <DataGrid.Columns>
           <DataGridTextColumn Binding="{Binding ID}" Header="ID"/>
           <DataGridCheckBoxColumn Binding="{Binding Done}" Header="Done"/>
