--- a/Src/sln/MainWindow2.xaml
+++ b/Src/sln/MainWindow2.xaml
@@ -17,7 +17,11 @@
     </DataTemplate>
   </Window.Resources>
   <Grid DataContext="{Binding Source={StaticResource Chairs}}">
-    <ListBox Margin="276.289,133.513,10,10" ItemTemplate="{DynamicResource ItemTemplate}" ItemsSource="{Binding Collection}"/>
-
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*"/>
+      <ColumnDefinition Width="*"/>
+    </Grid.ColumnDefinitions>
+    <ListBox Margin="10,10,10,10" ItemTemplate="{DynamicResource ItemTemplate}" ItemsSource="{Binding Collection}" Grid.Column="0"/>
+    <ListBox Margin="10,10,10,10" Grid.Column="1"/>
   </Grid>
 </Window>
