--- a/Src/sln/MainWindow.xaml
+++ b/Src/sln/MainWindow.xaml
@@ -1,10 +1,8 @@
-﻿<lnk:WindowBase xmlns:lnk="clr-namespace:AAV.WPF.Base;assembly=AAV.WPF" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+﻿<lnk:WindowBase xmlns:lnk="clr-namespace:AAV.WPF.Base;assembly=AAV.WPF" x:Name="wnd" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" x:Class="AAV.WpfTheme.Model.App.MainWindow" mc:Ignorable="d"
                 xmlns:AAV.WPF="clr-namespace:AAV.WPF.View;assembly=AAV.WPF"                
                 xmlns:models="clr-namespace:Cities.Models"
-                xmlns:local="clr-namespace:AAV.WpfTheme.Model.App" x:Name="wnd"
-                x:Class="AAV.WpfTheme.Model.App.MainWindow" mc:Ignorable="d"
-                Title="MainWindow" Height="500" Width="800"                
-                Loaded="onLoaded">
+                xmlns:local="clr-namespace:AAV.WpfTheme.Model.App" 
+                Title="MainWindow" Height="500" Width="800"                Loaded="onLoaded">
   <lnk:WindowBase.Resources>
     <ResourceDictionary >
       <ResourceDictionary.MergedDictionaries>
@@ -17,7 +15,7 @@
         <ResourceDictionary Source="/AAV.WPF;component/Base/BasicDefaultsLayout.xaml" />
       </ResourceDictionary.MergedDictionaries>
       <DataTemplate x:Key="SampleListItemTemplate">
-        <WrapPanel Width="240">
+        <WrapPanel Width="244">
           <Image Source="{Binding Look}" HorizontalAlignment="Left" Height="32" Width="32"/>
           <CheckBox IsChecked="{Binding Done}"/>
           <TextBlock Text="{Binding ID}"/>
@@ -53,7 +51,7 @@
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="3*"/>
         <ColumnDefinition Width="6.0"/>
-        <ColumnDefinition Width="3*"/>
+        <ColumnDefinition Width="Auto"/>
         <ColumnDefinition Width="6.0"/>
         <ColumnDefinition Width="5*"/>
       </Grid.ColumnDefinitions>
@@ -86,37 +84,37 @@
         <TextBox Text="101 Yonge St" />
       </WrapPanel>
 
-      <WrapPanel Grid.Column="2" Grid.Row="1">
-        <ComboBox Style="{DynamicResource NoGoForDarkThemes}" MinWidth="238" >
-          <ComboBoxItem Content="Abc" IsSelected="True"/>
+      <StackPanel Grid.Column="2" Grid.Row="1">
+        <ComboBox Style="{DynamicResource NoGoForDarkThemes}" MinWidth="244" >
+          <ComboBoxItem Content="NoGoForDarkThemes" IsSelected="True"/>
           <ComboBoxItem Content="Efg"/>
         </ComboBox>
-        <ComboBox Template="{DynamicResource ComboBoxTemplate_forIsEditable_False}" MinWidth="238"                                                              >
+        <ComboBox Template="{DynamicResource ComboBoxTemplate_forIsEditable_False}" MinWidth="244"                                                              >
           <ComboBoxItem Content="Abc"/>
           <ComboBoxItem Content="Efg"/>
           <ComboBoxItem IsSelected="True" Content="IsEditable=&quot;Dflt&quot; IsRO=&quot;Dflt&quot;"/>
         </ComboBox>
-        <ComboBox Template="{DynamicResource ComboBoxTemplate_forIsEditable_False}"  IsEditable="False"  IsReadOnly="True"   MinWidth="238" >
+        <ComboBox Template="{DynamicResource ComboBoxTemplate_forIsEditable_False}"  IsEditable="False"  IsReadOnly="True"   MinWidth="244" >
           <ComboBoxItem Content="Abc"/>
           <ComboBoxItem Content="Efg"/>
           <ComboBoxItem IsSelected="True" Content="IsEditable=&quot;False&quot; IsRO=&quot;True&quot;"/>
         </ComboBox>
-        <ComboBox Template="{DynamicResource ComboBoxTemplate_forIsEditable_False}"  IsEditable="False"  IsReadOnly="False"   MinWidth="238" >
+        <ComboBox Template="{DynamicResource ComboBoxTemplate_forIsEditable_False}"  IsEditable="False"  IsReadOnly="False"   MinWidth="244" >
           <ComboBoxItem Content="Abc"/>
           <ComboBoxItem Content="Efg"/>
           <ComboBoxItem IsSelected="True" Content="IsEditable=&quot;False&quot; IsRO=&quot;False&quot;"/>
         </ComboBox>
-        <ComboBox IsEditable="True" IsReadOnly="True"  MinWidth="238" >
+        <ComboBox IsEditable="True" IsReadOnly="True"  MinWidth="244" Background="Red" >
           <ComboBoxItem Content="Abc"/>
           <ComboBoxItem Content="Efg"/>
           <ComboBoxItem IsSelected="True" Content="IsEditable=&quot;True&quot; IsRO=&quot;True&quot;"/>
         </ComboBox>
-        <ComboBox Foreground="{DynamicResource LablForegroundBrush}" IsEditable="True" IsReadOnly="False"  MinWidth="238">
+        <ComboBox IsEditable="True" IsReadOnly="False"  MinWidth="244" Foreground="{DynamicResource LablForegroundBrush}" Background="Red" >
           <ComboBoxItem Content="Abc"/>
           <ComboBoxItem Content="Efg"/>
           <ComboBoxItem IsSelected="True" Content="IsEditable=&quot;True&quot; IsRO=&quot;False&quot;"/>
         </ComboBox>
-      </WrapPanel>
+      </StackPanel>
 
       <DataGrid Grid.Column="2" Grid.Row="3" x:Name="dg1" Foreground="{StaticResource MainForegroundBrush}">
         <DataGrid.Columns>
@@ -128,31 +126,31 @@
       <StackPanel Orientation="Vertical" Grid.Column="4" Grid.Row="1" Grid.ColumnSpan="3">
         <StackPanel Orientation="Horizontal" >
           <Label     Content="       Label:"  />
-          <TextBox   Text="No '_' - bad style " />
+          <TextBox   Width="208" Text="No '_' - bad style " />
           <TextBlock Text="tbk 4 info" />
           <TextBlock Text="Error (Dynamic Rsr)" Foreground="{DynamicResource ErorForegroundBrush}" />
         </StackPanel>
         <StackPanel Orientation="Horizontal" >
           <Label     Content="      _Label:"   Target="{Binding ElementName=t1}"/>
-          <TextBox   Text="Yes '_' - good style "                      x:Name="t1"/>
+          <TextBox   Width="208" Text="Yes '_' - good style "                      x:Name="t1"/>
           <TextBlock Text="tbk 4 info" />
           <TextBlock Text="Error (Static Rsr)" Foreground="{StaticResource ErorForegroundBrush}" />
         </StackPanel>
         <StackPanel Orientation="Horizontal" >
           <AccessText Text="Acc_essText:"  AccessKeyManager.AccessKeyPressed="onAccessKeyPressed_focusT2" />
-          <TextBox   Text="good style + event to target "                        x:Name="t2"/>
+          <TextBox   Width="208" Text="good style + event to target "                        x:Name="t2"/>
           <TextBlock Text="tbk 4 info" />
           <TextBlock Text="Error (Static Rsr)" Foreground="{StaticResource ErorForegroundBrush}" />
         </StackPanel>
         <StackPanel Orientation="Horizontal" >
           <AccessText Text="AccessText:"  />
-          <TextBox   Text="good style " />
+          <TextBox   Width="208" Text="good style " />
           <TextBlock Text="tbk 4 info" />
           <TextBlock Text="Error  (Static Rsr)" Foreground="{StaticResource ErorForegroundBrush}" />
         </StackPanel>
       </StackPanel>
 
-      <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="3" HorizontalAlignment="Right">
+      <StackPanel Orientation="Horizontal" Grid.Column="3" Grid.Row="5" Grid.ColumnSpan="3" HorizontalAlignment="Right">
         <Button Content="Default"  IsDefault="True" Click="onDefaultClick" />
         <Button Content="Cancel "  IsCancel="True"    />
         <Button Content="Disabled" IsEnabled="False"  />
